--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
   "author": "Vunt",
   "license": "ISC",
   "devDependencies": {
+    "dotenv": "^16.0.3",
     "node-sass": "^8.0.0",
-    "nodemon": "^2.0.21"
+    "nodemon": "^2.0.22"
   },
   "dependencies": {
     "express": "^4.18.2"
