--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "bcrypt": "^5.1.0",
+    "body-parser": "^1.20.2",
     "bootstrap": "^5.2.3",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
